--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
     "ts-node-dev": "^2.0.0",
@@ -20,6 +21,7 @@
   },
   "dependencies": {
     "@types/redis": "^4.0.10",
+    "axios": "^1.7.7",
     "express": "^4.21.1",
     "pg": "^8.13.0",
     "redis": "^4.7.0"
