--- a/package.json
+++ b/package.json
@@ -13,17 +13,23 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/async": "^3.2.24",
     "@types/axios": "^0.14.0",
     "@types/express": "^5.0.0",
     "@types/pg": "^8.11.10",
+    "@types/pg-promise": "^0.0.28",
+    "@types/retry": "^0.12.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
     "@types/redis": "^4.0.10",
+    "async": "^3.2.6",
     "axios": "^1.7.7",
     "express": "^4.21.1",
     "pg": "^8.13.0",
-    "redis": "^4.7.0"
+    "pg-promise": "^11.10.1",
+    "redis": "^4.7.0",
+    "retry": "^0.13.1"
   }
 }
