--- a/package.json
+++ b/package.json
@@ -6,24 +6,27 @@
     "tsc": "tsc",
     "start": "node build/index.js",
     "dev": "ts-node-dev src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@types/redis": "^4.0.10",
     "@types/async": "^3.2.24",
     "@types/axios": "^0.14.0",
     "@types/express": "^5.0.0",
+    "@types/jest": "^29.5.13",
     "@types/pg": "^8.11.10",
     "@types/pg-promise": "^0.0.28",
     "@types/retry": "^0.12.5",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.2.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
-    "@types/redis": "^4.0.10",
     "async": "^3.2.6",
     "axios": "^1.7.7",
     "express": "^4.21.1",
